# FTGL

./: .gitignore  .gitmodules  CMakeLists.txt  FTFontAtlas.cpp  FTFontAtlas.h  FTGL  Makefile  MakefileMacOS  README.md
Dependencies/include/GLFW/: glfw3.h
PureBasic/: FontAtlas.pbi  FreeTypeImage.pbi  GL.pbi  GLFW3.pbi  GLSL.pbi  Shape.pbi  Test.pbi  Test2.pbi  Utils.pbi
